# vlm_mcp_template

./: Makefile  README.md  client.py  generate_example_image.py  image_server.py  pyproject.toml  test.py  weather.py
.github/workflows/: pytest.yml
tests/: conftest.py  test_image_server.py
